--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,10 @@ jobs:
       run: |
         aws eks update-kubeconfig --region us-east-1 --name eyego-cluster
 
+    - name: Check kubectl access
+      run: |
+        kubectl get nodes
+
     - name: Deploy to EKS
       run: |
-        kubectl apply -f k8s/
+        kubectl apply -f k8s/ --validate=false
