--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,21 +20,31 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
+    - name: Create ECR repository if it doesn't exist
+      run: |
+        aws ecr describe-repositories --repository-names eyegoapi || \
+        aws ecr create-repository --repository-name eyegoapi
+
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
+    - name: Set up Docker Buildx (optional but recommended)
+      uses: docker/setup-buildx-action@v3
+
     - name: Build, tag, and push image to ECR
       run: |
         IMAGE_URI=982248023155.dkr.ecr.us-east-1.amazonaws.com/eyegoapi:latest
+        echo "Building Docker image..."
         docker build -t $IMAGE_URI .
+        echo "Pushing image to ECR..."
         docker push $IMAGE_URI
 
-    - name: Update kubeconfig
+    - name: Update kubeconfig for EKS cluster
       run: |
         aws eks update-kubeconfig --region us-east-1 --name eyego-cluster
 
-    - name: Check kubectl access
+    - name: Check Kubernetes access
       run: |
         kubectl get nodes
 
