--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,3 +51,7 @@ jobs:
     - name: Deploy to EKS
       run: |
         kubectl apply -f k8s/ --validate=false
+    - name: Restart deployment to apply latest Docker image
+      run: |
+        kubectl rollout restart deployment eyego-deployment
+
